# N02-Bast

./: README.md
Project/: 逻辑流程.md
backend/: app.js  package-lock.json  package.json
backend/routes/: index.js  shoppingitem.js  users.js
btcu-punk/backend/: package-lock.json  package.json
btcu-punk/crowd-fund-hope-chain/: README.md
btcu-punk/crowd-fund-hope-chain/crowd-fund-hope/: Cargo.toml  README.md
btcu-punk/crowd-fund-hope-chain/crowd-fund-hope/runtime/: Cargo.toml
btcu-punk/crowd-fund-hope-chain/crowd-fund-hope/runtime/wasm/: Cargo.toml  build.sh
btcu-punk/crowd-fund-hope-chain/crowd-fund-hope/runtime/wasm/src/: lib.rs
btcu-punk/crowd-fund-hope-chain/crowd-fund-hope/src/: chain_spec.rs  main.rs  service.rs
btcu-punk/frontend/: config-overrides.js  package-lock.json  package.json
btcu-punk/frontend/public/: bast.html  index.html  news detail.html  news information.html  project introduction.html
btcu-punk/frontend/src/: App.js  bast.css  carousel.js  index.css  index.js
btcu-punk/frontend/src/actions/: registrationActions.js
btcu-punk/frontend/src/components/: commonweal.js  disclosure.js  donate.js  homepage.js  hpheader.js
btcu-punk/frontend/src/pages/: homepage.js
btcu-punk/frontend/src/reducers/: auth.js  flashMessages.js  index.js
btcu-punk/frontend/src/redux/: user.redux.js
btcu-punk/server/: index.js  package-lock.json  package.json
btcu-punk/server/routes/: users.js
flask/: flaskr.db  flaskr.py  scheme.sql
flask/templates/: layout.html  login.html  show_entries.html
weid-sdk/tmp/: credentials.json  temp.data
(+6 files in other folders)
