[lib]
crate-type = ['cdylib']

[workspace]
members = []
[profile.release]
lto = true
panic = 'abort'

[features]
default = []
std = ['crowd-fund-hope-runtime/std']
[dependencies.crowd-fund-hope-runtime]
default-features = false
path = '..'

[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'crowd-fund-hope-runtime-wasm'
version = '1.0.0'
